syntax = "proto3";
import "common/rpc/base.proto";

service Storage {
    
    // Performs synchronous ping of service
    rpc ping(Ping) returns (Pong);
    rpc storageSave(StorageSaveRequest) returns (StorageSaveResponse);
    rpc storageLoad(StorageLoadRequest) returns (StorageLoadResponse);
    rpc storageRemove(StorageRemoveRequest) returns (StorageRemoveResponse);
}

message StorageSaveRequest {
    string filename = 1;
    string folder = 2,
    bytes data = 3;
    optional string content_type = 4;
}

message StorageSaveResponse {
    bool status = 1;
    optional string message = 2;
    string id = 3;
}

message StorageLoadRequest {
    string filename = 1;
    string folder = 2;
}

message StorageLoadResponse {
    bool status = 1;
    optional string message = 2;
    bytes data = 3;
    optional string content_type = 4;
    int32 size = 5;
}